# src/openubl/models/voided.py
@@ -4,10 +4,10 @@ RS N° 300-2014/SUNAT - Comunicación de Baja (RA).
 """
 from datetime import date
 
-from pydantic import BaseModel
+from pydantic import BaseModel, Field
 
+from .catalog import Catalog1
 from .common import Proveedor
-
 
 class VoidedDocumentsItem(BaseModel):
     """Item de comunicación de baja.
@@ -17,10 +17,9 @@ class VoidedDocumentsItem(BaseModel):
     - Serie y número del comprobante a dar de baja
     """
     serie: str
-    numero: int
-    tipoComprobante: str  # Catalog1
+    numero: int = Field(ge=1)
+    tipoComprobante: Catalog1
     descripcionSustento: str
-
 
 class VoidedDocuments(BaseModel):
     """Comunicación de Baja - RA.
@@ -29,7 +28,7 @@ class VoidedDocuments(BaseModel):
     - Identificador: RA-YYYYMMDD-NNNN
     - Fecha de emisión de los comprobantes que se dan de baja
     """
-    numero: int
+    numero: int = Field(ge=1)
     fechaEmision: date | None = None
     fechaEmisionComprobantes: date
     proveedor: Proveedor
